--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-picker-select": "^8.1.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-svg": "^13.14.0",
     "react-native-url-polyfill": "^2.0.0",
     "uuid": "^9.0.1"
